# Auto-DL

./: .coverage  .gitignore  README.md  config.example.yaml  config.smoke.yaml  config.yaml  pyproject.toml  requirements.txt  setup.py
docs/: hybrid_policy_schema.md  llm_director_mvp.md
docs/prompts/: llm_director_prompt.md
docs/schemas/: llm_director_plan.schema.json
docs/workflows/: agent_orchestration_graph.md
examples/: classification_example.py  regression_example.py
notebooks/: experiment_review.ipynb
src/autodl/: __init__.py  autodl.py  cli.py  config.py  data_preprocessor.py  hyperparameter_optimizer.py  io.py  model_generator.py  preprocess.py  profiling.py  train.py  utils.py
src/autodl/llm/: base.py  factory.py  ollama_provider.py  openai_provider.py
src/autodl/policy/: director.py  engine.py  metric_director.py  train_director.py
src/autodl/tracking/: base.py  factory.py  local_tracker.py  wandb_tracker.py
tests/: test_autodl.py  test_data_preprocessor.py  test_director_and_cli_helpers.py  test_metric_director.py  test_model_generator.py  test_support_modules.py  test_train_director.py  test_train_helpers.py  test_train_reporting_helpers.py
