[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnn-automation"
version = "0.1.0"
description = "Local-first CLI scaffolding for deep learning automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.5",
  "pydantic>=2.8",
  "PyYAML>=6.0.2",
  "pandas>=2.2",
  "pyarrow>=16.1",
  "numpy>=1.26",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
train = [
  "tensorflow>=2.16",
  "optuna>=3.6"
]
llm = [
  "ollama>=0.3.1",
  "openai>=1.37"
]
tracking = [
  "wandb>=0.17"
]
all = [
  "tensorflow>=2.16",
  "optuna>=3.6",
  "ollama>=0.3.1",
  "openai>=1.37",
  "wandb>=0.17"
]

[project.scripts]
autodl = "autodl.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
